# vectoriumPy

./: LICENSE  README.local.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
VectoriumPy/src/vectoriumPy/: __init__.py
VectoriumPy/src/vectoriumPy/Kinematics/: motion.py
VectoriumPy/src/vectoriumPy/Magnetism/: __init__.py  magnetism.py
VectoriumPy/src/vectoriumPy/Optics/: optics.py
VectoriumPy/src/vectoriumPy/Tests/: test_electricity.py  test_forces.py  test_kinematics.py  test_optics.py  test_thermodynamics.py  test_waves.py
VectoriumPy/src/vectoriumPy/Thermodynamics/: Thermodynamics.py
VectoriumPy/src/vectoriumPy/Waves/: light.py  sound.py
src/vectoriumPy/: .gitignore  __init__.py
src/vectoriumPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vectoriumPy/Electricity/: __init__.py  circuit.py  electric_fields.py  electricity.py
src/vectoriumPy/Energy/: __init__.py  energy.py
src/vectoriumPy/Force/: Force.py  __init__.py  gravitation.py
src/vectoriumPy/Kinematics/: __init__.py  motion.py  projectile_motion.py
src/vectoriumPy/Magnetism/: __init__.py  magnetism.py
src/vectoriumPy/Optics/: __init__.py  optics.py
src/vectoriumPy/Tests/: test_electricity.py  test_energy.py  test_forces.py  test_kinematics.py  test_magnetism.py  test_optics.py  test_thermodynamics.py  test_vectors.py  test_waves.py
src/vectoriumPy/Thermodynamics/: Thermodynamics.py  __init__.py
src/vectoriumPy/Vectors/: __init__.py  vectors.py
src/vectoriumPy/Waves/: __init__.py  light.py  sound.py
src/vectoriumPy/examples/: examples.py
